--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <div class="baner">
-            <h1 class="rodape">Mabi Office</h1>
+    <div class="cabecalho">
+        <div class="linha">
+            <div class="coluna col5">
+                <img src="logo_mabi.png" alt="Imagem" />
+            </div>
+            <div class="coluna col7">
+                <div class="topo_texto">
+                    <h2>Mabi Office</h2>
+                </div>
+            </div>
         </div>
-    </header>
+    </div>
     
 </body>
 </html>
