--- a/index.html
+++ b/index.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<html>
+    <head>
+        <title>Mabi Office</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="logo_mabi.png">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700" >
+        <link rel="stylesheet" type="text/css" href="estilo.css"/>
+    </head>
 <body>
-    <div class="cabecalho">
-        <div class="linha">
-            <div class="coluna col5">
-                <img src="logo_mabi.png" alt="Imagem" />
-            </div>
-            <div class="coluna col7">
-                <div class="topo_texto">
-                    <h2>Mabi Office</h2>
-                </div>
-            </div>
-        </div>
-    </div>
     
 </body>
 </html>
