--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Mabi Office</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="logo_mabi.png">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700" >
-        <link rel="stylesheet" type="text/css" href="estilo.css"/>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="download (1).png">
+    <link rel="stylesheet" href="estilo.css">
+    <title>Mabi Office</title>
+</head>
 <body>
-    
-</body>
-</html>
+
+    <header>
+        <div class="baner">
+            <h1 class="rodape">Mabi Office</h1>
+        </div>
+    </header>
+    <main>
