--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="icon" href="download (1).png">
     <link rel="stylesheet" href="estilo.css">
     <title>Mabi Office</title>
-</head>
+  <link rel="shortcut icon" href="logo_mabi.png" type="image/x-icon">
 <body>
 
     <header>
         <div class="baner">
             <h1 class="rodape">Mabi Office</h1>
+           
         </div>
     </header>
