--- a/index.html
+++ b/index.html
@@ -15,3 +15,76 @@
             <h1 class="rodape">Mabi Office </h1> 
         </div>
     </header>
+    <main>
+        <section class="destinos">
+            <h2 class="titulo">Destinos Populares de Formoso do Araguaia</h2>
+            <ul>
+                <li>
+                    <img src="Ilha-do-Bananal.jpg" alt="Destino 1">
+                    <h3>Ilha do Bananal</h3>
+                    <p class="seila">A maior ilha fluvial do mundo, situada entre os rios Javaé e Araguaia,
+                    é o lar de povos indígenas Javaé e Karajá.</p>
+                    <a href="./destinos/ilha_bananal.html"><div class="conhecer">Conhecer</div></a>
+                </li>
+                <li>
+                    <img src="Lago_Municipal.jpg" alt="Destino 2">
+                    <h3>Lago Municipal</h3>
+                    <p>Lago urbano com uma pista de caminhada na margem.</p>
+                    <a href="./destinos/lago_municipal.html"><div class="conhecer" style="top: 100px;">Conhecer</div></a>
+                </li>
+                <li>
+                    <img src="2020-09-09.jpg" alt="Destino 3">
+                    <h3>Pousada Triuno</h3>
+                    <p>Muito conforto e infraestrutura na área rural, com atendimento 
+                    atencioso e suporte para a pesca esportiva.</p>
+                    <a href="./destinos/pousada_triuno.html"><div class="conhecer">Conhecer</div></a>
+                </li>
+                <li>
+                    <img src="1636381502dFmVJrX7sJ.jpg" alt="Destino 4">
+                    <h3>Lago Taboca</h3>
+                    <p>Criado para a irrigação do Projeto Rio Formoso, tornou-se ponto 
+                    famoso para a pesca de tucunaré, pirarucu, pintado, aruanã, etc.</p>
+                    <a href="./destinos/lago_taboca.html"><div class="conhecer" style="top: 60px;">Conhecer</div></a>
+                </li>
+                <li>
+                    <img src="./484.jpg" alt="Destino 5">
+                    <h3>Praia Recanto da Ilha</h3>
+                    <p>As margens do Rio Javaés que tem ao fundo a Ilha do Bananal, a maior ilha fluvial
+                    do mundo, e o melhor sem pagar nada por isso. Oferecendo as famílias o melhor custo 
+                    benefícios no Sul, não há travessia e o estacionamento prático e seguro.</p>
+                    <a href="./destinos/recanto.html"><div class="conhecer" style="top: 0px;">Conhecer</div></a>
+                </li>
+                <li>
+                    <img src="AGT-Fundacao-Bradesco-Canuana-Leo-Finotti-42605PR170128-002D.jpg" alt="Destino 6">
+                    <h3>Fundação Bradesco - Escola de Canuanã</h3>
+                    <p>A Escola-fazenda de Canuanã traz experiências diferenciadas para os alunos:
+                    moradas com áreas de descanso, convívio e lazer, atividades ao ar livre, salas
+                    modernas e o curso Técnico de Agropecuária.</p>
+                    <a href="./destinos/fundacao.html"><div class="conhecer" style="top:0px;">Conhecer</div></a>
+                </li>
+                <li>
+                    <img src="Alt.jpg" alt="Destino 7">
+                    <h3>Aldeia Canuanã</h3>
+                    <p>Aldeia mãe do povo Javaé.</p>
+                    <a href="./destinos/aldeia.html"><div class="conhecer" style="top: 120px;">Conhecer</div></a>
+                </li>
+                <li>
+                    <img src="img_2099.webp" alt="Destino 8">
+                    <h3>Lagoa do Morro Azul</h3>
+                    <p>Lagoa do Morro Azul, um manancial de águas termais surgidas da fenda 
+                    de um bloco de rocha calcária, numa abundância impressionante, que de 
+                    imediato vai dando formação a uma bela e cristalina piscina natural.</p>
+                    <a href="./destinos/mina.html"><div class="conhecer" style="top: 30px;">Conhecer</div></a>
+                </li>
+                <li>
+                    <img src="1643371414cjThphjdvp.jpg" alt="Destino 9">
+                    <h3>Casa de Pedra e o Morro Azul</h3>
+                    <p>Nas proximidades encontra-se a Casa de Pedra e o Morro Azul de onde é 
+                    extraído calcário, usado na agricultura para a correção do solo, cal, 
+                    brita, granitina.</p>
+                    <a href="./destinos/casa_de_pedra.html"><div class="conhecer" style="top: 70px;">Conhecer</div></a>
+                </li>
+                <a href=""><div class="conhecer">Conhecer</div></a>
+            </ul>
+        </section>
+    </main>
