--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         </div>
     </header>
     <main>
-        <section class="destinos">
-            <h2 class="titulo">Destinos Populares de Formoso do Araguaia</h2>
+        <section class="compras">
+            <h2 class="titulo">Cadeiras</h2>
             <ul>
                 <li>
-                    <img src="Ilha-do-Bananal.jpg" alt="Destino 1">
-                    <h3>Ilha do Bananal</h3>
-                    <p class="seila">A maior ilha fluvial do mundo, situada entre os rios Javaé e Araguaia,
-                    é o lar de povos indígenas Javaé e Karajá.</p>
-                    <a href="./destinos/ilha_bananal.html"><div class="conhecer">Conhecer</div></a>
+                    <img src="cadeira_amarela.webp" alt="cadeira 1">
+                    <h3>R$ 175,00
+                        ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</h3>
+                    <p class="seila">Cadeira de escritorio iso Turim plastica amarela home office chair</p>
+                    <a href="./destinos/cadeira_amarela.html"><div class="comprar">Comprar</div></a>
                 </li>
                 <li>
                     <img src="Lago_Municipal.jpg" alt="Destino 2">
