--- a/index.html
+++ b/index.html
@@ -22,18 +22,19 @@
                 <li>
                     <img src="cadeira_amarela.webp" alt="cadeira 1">
                     <h3>R$ 175,00
-                        ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</h3>
+                    <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</h3>
                     <p class="seila">Cadeira de escritorio iso Turim plastica amarela home office chair</p>
-                    <a href="./destinos/cadeira_amarela.html"><div class="comprar">Comprar</div></a>
+                    <a href="./compras/cadeira_amarela.html"><div class="comprar">Comprar</div></a>
                 </li>
                 <li>
-                    <img src="Lago_Municipal.jpg" alt="Destino 2">
-                    <h3>Lago Municipal</h3>
-                    <p>Lago urbano com uma pista de caminhada na margem.</p>
-                    <a href="./destinos/lago_municipal.html"><div class="conhecer" style="top: 100px;">Conhecer</div></a>
+                    <img src="cadeira_azul.jpg" alt="cadeira 2">
+                    <h3>R$ 386,32 no Pix (12% de desconto)
+                    <br>ou R$ 439,00 em 3x de R$ 146,33 sem juros</h3>
+                    <p>Cadeira de Escritório Presidente com Rodinha Fortt Trento Azul</p>
+                    <a href="./compras/cadeira_azul.html"><div class="comprar" style="top: 100px;">Comprar</div></a>
                 </li>
                 <li>
-                    <img src="2020-09-09.jpg" alt="Destino 3">
+                    <img src="cadeira_branca.jpg" alt="Destino 3">
                     <h3>Pousada Triuno</h3>
                     <p>Muito conforto e infraestrutura na área rural, com atendimento 
                     atencioso e suporte para a pesca esportiva.</p>
