mudança de nome

--- a/.vscode/html/index.html
+++ b/.vscode/html/index.html
@@ -35,9 +35,8 @@
                 </li>
                 <li>
                     <img src="../imagens/cadeira_branca.jpg" alt="Destino 3">
-                    <h3>Pousada Triuno</h3>
-                    <p>Muito conforto e infraestrutura na área rural, com atendimento 
-                    atencioso e suporte para a pesca esportiva.</p>
+                    <h3>Cadeira Branca</h3>
+                    <p>Muito conforto </p>
                     <a href="./cadeira_branca.html"><div class="Comprar">Comprar</div></a>
                 </li>
                 <li>
