--- a/.vscode/html/index.html
+++ b/.vscode/html/index.html
@@ -12,7 +12,7 @@
 
     <header>
         <div class="baner">
-            <h1 class="rodape">Mabi Office </h1> 
+            <h1 class="rodape"> - Mabi Office - </h1> 
         </div>
     </header>
     <main>
