--- a/.vscode/html/index.html
+++ b/.vscode/html/index.html
@@ -57,8 +57,8 @@
                 </li>
                 <li>
                     <img src="../imagens/cadeira_laranjado.webp" alt="Destino 7">
-                    <h3>Aldeia Canuanã</h3>
-                    <p>Aldeia mãe do povo Javaé.</p>
+                    <h3>Cadeira Laranja</h3>
+                    <p>Cadeira Laranja</p>
                     <a href="./cadeira_laranjado.html"><div class="Comprar" style="top: 120px;">Comprar</div></a>
                 </li>
                 <li>
@@ -71,7 +71,7 @@
                 </li>
                 <li>
                     <img src="../imagens/cadeira_marrom.jpg" alt="Destino 9">
-                    <h3>Casa de Pedra e o Morro Azul</h3>
+                    <h3>Cadeira Marrom</h3>
                     <p>Nas proximidades encontra-se a Casa de Pedra e o Morro Azul de onde é 
                     extraído calcário, usado na agricultura para a correção do solo, cal, 
                     brita, granitina.</p>
@@ -139,21 +139,19 @@
                     <img src="../imagens/gamer_branca.png" alt="cadeira 2">
                     <h3>R$ 386,32 no Pix (12% de desconto)
                     <br>ou R$ 439,00 em 3x de R$ 146,33 sem juros</h3>
-                    <p>Cadeira de Escritório Presidente com Rodinha Fortt Trento Azul</p>
+                    <p>Cadeira Gamer Branca</p>
                     <a href="./gamer_branca.html"><div class="Comprar" style="top: 100px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/gamer_holografica.png" alt="Destino 3">
                     <h3>Pousada Triuno</h3>
-                    <p>Muito conforto e infraestrutura na área rural, com atendimento 
-                    atencioso e suporte para a pesca esportiva.</p>
+                    <p>Cadeira Gamer Holográfica</p>
                     <a href="./gamer_holografica.html"><div class="Comprar">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/gamer_laranja.png" alt="Destino 4">
                     <h3>Lago Taboca</h3>
-                    <p>Criado para a irrigação do Projeto Rio Formoso, tornou-se ponto 
-                    famoso para a pesca de tucunaré, pirarucu, pintado, aruanã, etc.</p>
+                    <p>Cadeira Gamer Laranja</p>
                     <a href="./gamer_laranja.html"><div class="Comprar" style="top: 60px;">Comprar</div></a>
                 </li>
                 <li>
