--- a/.vscode/html/index.html
+++ b/.vscode/html/index.html
@@ -21,22 +21,22 @@
             <ul>
                 <li>
                     <img src="../imagens/cadeira_amarela.webp" alt="cadeira 1">
-                    <h3>R$ 175,00
-                    <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</h3>
-                    <p class="seila">Cadeira de escritorio iso Turim plastica amarela home office chair</p>
+                    <h3>Cadeira de escritorio iso Turim plastica amarela home office chair</h3>
+                    <p class="seila">R$ 175,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./cadeira_amarela.html"><div class="Comprar">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_azul.jpg" alt="cadeira 2">
-                    <h3>R$ 386,32 no Pix (12% de desconto)
-                    <br>ou R$ 439,00 em 3x de R$ 146,33 sem juros</h3>
-                    <p>Cadeira de Escritório Presidente com Rodinha Fortt Trento Azul</p>
+                    <h3>Cadeira de Escritório Presidente com Rodinha Fortt Trento Azul</h3>
+                    <p>R$ 386,32 no Pix (12% de desconto)
+                        <br>ou R$ 439,00 em 3x de R$ 146,33 sem juros</p>
                     <a href="./cadeira_azul.html"><div class="Comprar" style="top: 100px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_branca.jpg" alt="Destino 3">
                     <h3>Cadeira Branca</h3>
-                    <p>Muito conforto </p>
+                    <p></p>
                     <a href="./cadeira_branca.html"><div class="Comprar">Comprar</div></a>
                 </li>
                 <li>
