--- a/.vscode/html/index.html
+++ b/.vscode/html/index.html
@@ -15,6 +15,8 @@
             <h1 class="rodape"> - Mabi Office - </h1> 
         </div>
     </header>
+    <nav><a href="../index.html">Menu principal</a></nav>
+
     <main>
         <section class="compras">
             <h2 class="titulo">Cadeiras</h2>
