--- a/html/cadeira_executiva.html
+++ b/html/cadeira_executiva.html
@@ -12,6 +12,8 @@
 <body>
 
     <header>
+        <img src="../imagens/logo_redonda.png" alt="">
+
         <div class="baner">
             <h1>Mabi Office</h1>
         </div>
