luiz pajina inicial

--- a/html/cadeira_amarela.html
+++ b/html/cadeira_amarela.html
@@ -11,25 +11,21 @@
 
 <body>
 
-    <header>
-        <div class="logo_mabi">
-            <img src="../imagens/logo_mabi.png" >
-        </div>
-        <div class="Menu">
-            <a href="./index.html"><div class="Menu" style="top: 100px;">Menu</div></a>
-        </div>
-        <div class="">
+    
+        <header>
+            <img src="../imagens/logo_redonda.png" alt="">
+    
+            <div class="baner">
+                <h1>Mabi Office</h1>
+            </div>
+        </header>
+     <nav><a  href="./cadeira_executiva.html">Menu principal</a></nav>
+    <!-- <a href="./gamer_pretaholo.html"> <button>Menu Principal </button> </a> -->
 
-        </div>
-        <div>
-
-        </div>
-    </header>
-    <nav><a href="../index.html">Menu principal</a></nav>
     <main>
         <h1>Cadeira</h1>
-        <p>A Ilha do Bananal é a maior ilha genuinamente fluvial do mundo, com cerca de vinte mil quilômetros quadrados
-            de área, cercada pelos rios Araguaia e Javaés.</p>
+        <!-- <p>A Ilha do Bananal é a maior ilha genuinamente fluvial do mundo, com cerca de vinte mil quilômetros quadrados
+            de área, cercada pelos rios Araguaia e Javaés.</p> -->
         <div class="produto">
             <div class="prod_img">
                 <img src="../imagens/cadeira_amarela.webp" alt="" >
