--- a/html/cadeira_executiva.html
+++ b/html/cadeira_executiva.html
@@ -57,8 +57,8 @@
             </div>
 
             <div class="coluna">
-                <img src="../imagens/cadeira_executiva.webp" alt="">
-                <a href="./cadeira_executiva.html"> <button>Cadeira executiva</button> </a>
+                <img src="../imagens/cadeira_executiva.webp " alt="">
+                <a href="./cadeira-de-balanco_65c6.html"> <button>Cadeira executiva</button> </a>
                 <h5>.</h5>
 
 
@@ -89,6 +89,8 @@
             </div>
         </div>
     </main>
+
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             
     <footer>
         <p class="direitos">&copy; 2023 Site de Turismo. Todos os direitos reservados.</p>
     </footer>
