--- a/html/cadeira_executiva.html
+++ b/html/cadeira_executiva.html
@@ -19,75 +19,163 @@
         </div>
     </header>
     <main>
-        <div class="linha">
-            <div class="coluna">
-                <img src="../imagens/cadeira_recepção.jpg" alt="">
-                <a href="./cadeira_recepção.html"> <button>Cadeira recepção</button> </a>
-                <h5></h5>
-
-            </div>
-            <div class="coluna">
-                <img src="../imagens/cadeira_amarela.webp">
-                <a href="./cadeira_amarela.html"> <button>Cadeira amarela</button> </a>
-                <h5></h5>
-
-            </div>
-
-            <div class="coluna">
-                <img src="../imagens/cadeira_recepçãomarrom.jpg" alt="">
-                <a href="./cadeira_recepçãomarrom.html"> <button>Cadeira azul</button> </a>
-                <h5></h5>
-
-
-            </div>
-        </div>
-
-        <div class="linha">
-            <div class="coluna">
-                <img src="../imagens/gamer_holografica.png" alt="">
-                <a href="./gamer_holografica.html"> <button>Cadeira gamer homolográfica </button> </a>
-                <h5></h5>
-
-            </div>
-            <div class="coluna">
-                <img src="../imagens/gamer_pretaholo.png">
-                <a href="./gamer_pretaholo.html"> <button>Cadeira gamer pretaholo </button> </a>
-                <h5></h5>
-
-            </div>
-
-            <div class="coluna">
-                <img src="../imagens/cadeira_executiva.webp " alt="">
-                <a href="./cadeira-de-balanco_65c6.html"> <button>Cadeira executiva</button> </a>
-                <h5>.</h5>
-
-
-            </div>
-        </div>
-
-        <div class="linha">
-            <div class="coluna">
-                <img src="../imagens/cadeira_laranjado.webp" alt="">
-                <a href="./cadeira_laranjado.html"> <button>Cadeira laranjada</button> </a>
-                <h5></h5>
-
-
-            </div>
-            <div class="coluna">
-                <img src="../imagens/cadeira_maior.jpg">
-                <a href="./cadeira_maior.html"> <button>Cadeira grande</button> </a>
-                <h5></h5>
-
-            </div>
-
-            <div class="coluna">
-                <img src="../imagens/cadeira_vermelha.jpg" alt="">
-                <a href="./cadeira_vermelha.html"> <button>Cadeira Vermelha</button> </a>
-                <h5></h5>
-
-
-            </div>
-        </div>
+        <section class="compras">
+            <h2 class="titulo">Cadeiras</h2>
+            <ul>
+                <li>
+                    <img src="../imagens/cadeira_amarela.webp" alt="cadeira 1">
+                    <h3>Cadeira de escritorio iso Turim plastica amarela home office chair</h3>
+                    <p class="seila">R$ 175,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
+                    <a href="./cadeira_amarela.html"><div class="Comprar">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/cadeira_azul.jpg" alt="cadeira 2">
+                    <h3>Cadeira de Escritório Presidente com Rodinha Fortt Trento Azul</h3>
+                    <p>R$ 386,32 no Pix (12% de desconto)
+                        <br>ou R$ 439,00 em 3x de R$ 146,33 sem juros</p>
+                    <a href="./cadeira_azul.html"><div class="Comprar" style="top: 100px;">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/cadeira_branca.jpg" alt="Destino 3">
+                    <h3>Cadeira Branca</h3>
+                    <p></p>
+                    <a href="./cadeira_branca.html"><div class="Comprar">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/cadeira_cromada.jpg" alt="Destino 5">
+                    <h3>Praia Recanto da Ilha</h3>
+                    <p>As margens do Rio Javaés que tem ao fundo a Ilha do Bananal, a maior ilha fluvial
+                    do mundo, e o melhor sem pagar nada por isso. Oferecendo as famílias o melhor custo 
+                    benefícios no Sul, não há travessia e o estacionamento prático e seguro.</p>
+                    <a href="./cadeira_cromada.html"><div class="Comprar" style="top: 0px;">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/cadeira_executiva.webp" alt="Destino 6">
+                    <h3>Fundação Bradesco - Escola de Canuanã</h3>
+                    <p>A Escola-fazenda de Canuanã traz experiências diferenciadas para os alunos:
+                    moradas com áreas de descanso, convívio e lazer, atividades ao ar livre, salas
+                    modernas e o curso Técnico de Agropecuária.</p>
+                    <a href="./cadeira_executiva.html"><div class="Comprar" style="top:0px;">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/cadeira_laranjado.webp" alt="Destino 7">
+                    <h3>Cadeira Laranja</h3>
+                    <p>Cadeira Laranja</p>
+                    <a href="./cadeira_laranjado.html"><div class="Comprar" style="top: 120px;">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/cadeira_maior.jpg" alt="Destino 8">
+                    <h3>Lagoa do Morro Azul</h3>
+                    <p>Lagoa do Morro Azul, um manancial de águas termais surgidas da fenda 
+                    de um bloco de rocha calcária, numa abundância impressionante, que de 
+                    imediato vai dando formação a uma bela e cristalina piscina natural.</p>
+                    <a href="./cadeira_maior.html"><div class="Comprar" style="top: 30px;">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/cadeira_marrom.jpg" alt="Destino 9">
+                    <h3>Cadeira Marrom</h3>
+                    <p>Nas proximidades encontra-se a Casa de Pedra e o Morro Azul de onde é 
+                    extraído calcário, usado na agricultura para a correção do solo, cal, 
+                    brita, granitina.</p>
+                    <a href="./cadeira_marrom.html"><div class="Comprar" style="top: 70px;">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/cadeira_recepção.jpg" alt="cadeira 1">
+                    <h3>R$ 175,00
+                    <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</h3>
+                    <p class="seila">Cadeira de escritorio iso Turim plastica amarela home office chair</p>
+                    <a href="./cadeira_recepção.html"><div class="Comprar">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/cadeira_recepçãomarrom.jpg" alt="cadeira 2">
+                    <h3>R$ 386,32 no Pix (12% de desconto)
+                    <br>ou R$ 439,00 em 3x de R$ 146,33 sem juros</h3>
+                    <p>Cadeira de Escritório Presidente com Rodinha Fortt Trento Azul</p>
+                    <a href="./cadeira_recepçãomarrom.html"><div class="Comprar" style="top: 100px;">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/cadeira_simpazul.webp" alt="Destino 3">
+                    <h3>Pousada Triuno</h3>
+                    <p>Muito conforto e infraestrutura na área rural, com atendimento 
+                    atencioso e suporte para a pesca esportiva.</p>
+                    <a href="./cadeira_simpaazul.html"><div class="Comprar">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/cadeira_simples.webp" alt="Destino 4">
+                    <h3>Lago Taboca</h3>
+                    <p>Criado para a irrigação do Projeto Rio Formoso, tornou-se ponto 
+                    famoso para a pesca de tucunaré, pirarucu, pintado, aruanã, etc.</p>
+                    <a href="./cadeira_simples.html"><div class="Comprar" style="top: 60px;">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/cadeira_verde.jpg" alt="Destino 5">
+                    <h3>Praia Recanto da Ilha</h3>
+                    <p>As margens do Rio Javaés que tem ao fundo a Ilha do Bananal, a maior ilha fluvial
+                    do mundo, e o melhor sem pagar nada por isso. Oferecendo as famílias o melhor custo 
+                    benefícios no Sul, não há travessia e o estacionamento prático e seguro.</p>
+                    <a href="./cadeira_verde.html"><div class="Comprar" style="top: 0px;">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/cadeira_verdeclaro.webp" alt="Destino 6">
+                    <h3>Fundação Bradesco - Escola de Canuanã</h3>
+                    <p>A Escola-fazenda de Canuanã traz experiências diferenciadas para os alunos:
+                    moradas com áreas de descanso, convívio e lazer, atividades ao ar livre, salas
+                    modernas e o curso Técnico de Agropecuária.</p>
+                    <a href="./cadeira_verdeclaro.html"><div class="Comprar" style="top:0px;">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/cadeira_vermelha.jpg" alt="Destino 7">
+                    <h3>Aldeia Canuanã</h3>
+                    <p>Aldeia mãe do povo Javaé.</p>
+                    <a href="./cadeira_vermelha.html"><div class="Comprar" style="top: 120px;">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/cadeira-de-balanco_65c6.jpeg" alt="Destino 8">
+                    <h3>Lagoa do Morro Azul</h3>
+                    <p>Lagoa do Morro Azul, um manancial de águas termais surgidas da fenda 
+                    de um bloco de rocha calcária, numa abundância impressionante, que de 
+                    imediato vai dando formação a uma bela e cristalina piscina natural.</p>
+                    <a href="./cadeira-de-balanco_65c6.html"><div class="Comprar" style="top: 30px;">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/gamer_branca.png" alt="cadeira 2">
+                    <h3>R$ 386,32 no Pix (12% de desconto)
+                    <br>ou R$ 439,00 em 3x de R$ 146,33 sem juros</h3>
+                    <p>Cadeira Gamer Branca</p>
+                    <a href="./gamer_branca.html"><div class="Comprar" style="top: 100px;">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/gamer_holografica.png" alt="Destino 3">
+                    <h3>Pousada Triuno</h3>
+                    <p>Cadeira Gamer Holográfica</p>
+                    <a href="./gamer_holografica.html"><div class="Comprar">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/gamer_laranja.png" alt="Destino 4">
+                    <h3>Lago Taboca</h3>
+                    <p>Cadeira Gamer Laranja</p>
+                    <a href="./gamer_laranja.html"><div class="Comprar" style="top: 60px;">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/gamer_pretaholo.png" alt="Destino 5">
+                    <h3>Praia Recanto da Ilha</h3>
+                    <p>As margens do Rio Javaés que tem ao fundo a Ilha do Bananal, a maior ilha fluvial
+                    do mundo, e o melhor sem pagar nada por isso. Oferecendo as famílias o melhor custo 
+                    benefícios no Sul, não há travessia e o estacionamento prático e seguro.</p>
+                    <a href="./gamer_pretaholo.html"><div class="Comprar" style="top: 0px;">Comprar</div></a>
+                </li>
+                <li>
+                    <img src="../imagens/poltrona_marrom.png" alt="Destino 6">
+                    <h3>Fundação Bradesco - Escola de Canuanã</h3>
+                    <p>A Escola-fazenda de Canuanã traz experiências diferenciadas para os alunos:
+                    moradas com áreas de descanso, convívio e lazer, atividades ao ar livre, salas
+                    modernas e o curso Técnico de Agropecuária.</p>
+                    <a href="./poltrona_marrom.html"><div class="Comprar" style="top:0px;">Comprar</div></a>
+                </li>
+                <a href=""><div class="conhecer">Conhecer</div></a>
+            </ul>
+        </section>
     </main>
 
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
