--- a/html/cadeira_simples.html
+++ b/html/cadeira_simples.html
@@ -18,9 +18,8 @@
     </header>
     <nav><a href="../index.html">Menu principal</a></nav>
     <main>
-        <h1>Cadeira</h1>
-        <p>A Ilha do Bananal é a maior ilha genuinamente fluvial do mundo, com cerca de vinte mil quilômetros quadrados
-            de área, cercada pelos rios Araguaia e Javaés.</p>
+        <h1>Cadeira Amarela</h1>
+       
         <img src="../cadeira_amarela.html" alt="">
         <p>A cadeira iso é uma cadeira que gera conforto e é resistente. Ela é super fácil de limpar. Uma cadeira moderna, versátil, resistente, leve de fácil manuseio e é empilhável. Ideal para todos os ambientes, seja em sua casa, na sua empresa ou em sua igreja
 
