--- a/html/cadeira_branca.html
+++ b/html/cadeira_branca.html
@@ -19,13 +19,18 @@
     <nav><a href="../index.html">Menu principal</a></nav>
     <main>
         <h1>Cadeira Branca</h1>
-        <img src="../cadeira_amarela.html" alt="">
+
+        <div class="produto">
+            <div class="prod_img">
+                <img src="../imagens/cadeira_branca.jpg" alt="" >
+            </div>
+        <!-- <img src="../imagens/cadeira_branca.jpg" alt=""> -->
         <p>A cadeira iso é uma cadeira que gera conforto e é resistente. Ela é super fácil de limpar. Uma cadeira moderna, versátil, resistente, leve de fácil manuseio e é empilhável. Ideal para todos os ambientes, seja em sua casa, na sua empresa ou em sua igreja
 
             Características:
             Estrutura de tubo de aço na cor preta (empilhável)
             
-            Assento e encosto de Polipropileno 
+            Assento e encosto de Polipropileno
             Altura: 80cm Largura: 47 cm Profundidade: 53 cm Peso: 3,500 kg
             Suporta até 120 kg uniformemente distribuídos 
             
