--- a/html/cadeira_amarela.html
+++ b/html/cadeira_amarela.html
@@ -19,7 +19,7 @@
                 <h1>Mabi Office</h1>
             </div>
         </header>
-     <nav><a  href="./cadeira_executiva.html">Menu principal</a></nav>
+     <nav><a  href="../index.html">Menu principal</a></nav>
     <!-- <a href="./gamer_pretaholo.html"> <button>Menu Principal </button> </a> -->
 
     <main>
