--- a/html/cadeira_laranjado.html
+++ b/html/cadeira_laranjado.html
@@ -19,7 +19,12 @@
     <nav><a href="../index.html">Menu principal</a></nav>
     <main>
         <h1>Cadeira Laranja</h1>
-        <img src="../cadeira_amarela.html" alt="">
+
+        <div class="prod_img">
+            <img src="../imagens/cadeira_laranjado.webp" alt="" >
+        </div>
+
+        <!-- <img src="../cadeira_amarela.html" alt=""> -->
         <p>A cadeira iso é uma cadeira que gera conforto e é resistente. Ela é super fácil de limpar. Uma cadeira moderna, versátil, resistente, leve de fácil manuseio e é empilhável. Ideal para todos os ambientes, seja em sua casa, na sua empresa ou em sua igreja
 
             Características:
