--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             <ul>
                 <li>
                     <img src="../imagens/cadeira_amarela.webp" alt="cadeira 1">
-                    <h3>Cadeira de escritorio iso Turim plastica amarela home office chair</h3>
+                    <h3>Cadeira de Escritório</h3>
                     <p class="seila">R$ 175,00
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_amarela.html"><div class="Comprar">Comprar</div></a>
                 </li>
                 <li>
                     <img src="./imagens/cadeira_azul.avif" alt="cadeira 2">
-                    <h3>Cadeira de Escritório Presidente com Rodinha Fortt Trento Azul</h3>
+                    <h3>Cadeira de Escritório Presidente Trento Azul</h3>
                     <p>R$ 386,32 no Pix (12% de desconto)
                         <br>ou R$ 439,00 em 3x de R$ 146,33 sem juros</p>
                     <a href="./html/cadeira_azul.html"><div class="Comprar" style="top: 100px;">Comprar</div></a>
@@ -39,66 +39,57 @@
                 <li>
                     <img src="../imagens/cadeira_branca.jpg" alt="Destino 3">
                     <h3>Cadeira Branca</h3>
-                    <p></p>
+                    <p>Com rodinhas maleavéis e estofados macios</p>
                     <a href="./html/cadeira_branca.html"><div class="Comprar">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_cromada.jpg" alt="Destino 5">
-                    <h3>Praia Recanto da Ilha</h3>
-                    <p>As margens do Rio Javaés que tem ao fundo a Ilha do Bananal, a maior ilha fluvial
-                    do mundo, e o melhor sem pagar nada por isso. Oferecendo as famílias o melhor custo 
-                    benefícios no Sul, não há travessia e o estacionamento prático e seguro.</p>
+                    <h3>Cadeira Simples Cromada</h3>
+                    <p>Pernas cromadas e ferro confortavéis nas costas</p>
                     <a href="./html/cadeira_cromada.html"><div class="Comprar" style="top: 0px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_executiva.webp" alt="Destino 6">
-                    <h3>Fundação Bradesco - Escola de Canuanã</h3>
-                    <p>A Escola-fazenda de Canuanã traz experiências diferenciadas para os alunos:
-                    moradas com áreas de descanso, convívio e lazer, atividades ao ar livre, salas
-                    modernas e o curso Técnico de Agropecuária.</p>
+                    <h3>Cadeira Executiva
+                    <p>A Cadeira Executiva mais ampla do mercado.</p>
                     <a href="./html/cadeira_executiva.html"><div class="Comprar" style="top:0px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_laranjado.webp" alt="Destino 7">
                     <h3>Cadeira Laranja</h3>
-                    <p>Cadeira Laranja</p>
+                    <p>Cadeira Laranja simples para sua casa</p>
                     <a href="./html/cadeira_laranjado.html"><div class="Comprar" style="top: 120px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_maior.jpg" alt="Destino 8">
-                    <h3>Lagoa do Morro Azul</h3>
-                    <p>Lagoa do Morro Azul, um manancial de águas termais surgidas da fenda 
-                    de um bloco de rocha calcária, numa abundância impressionante, que de 
-                    imediato vai dando formação a uma bela e cristalina piscina natural.</p>
+                    <h3>Cadeira Grande</h3>
+                    <p>Cadeira Grande para todos os ambientes</p>
                     <a href="./cadeira_maior.html"><div class="Comprar" style="top: 30px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_marrom.jpg" alt="Destino 9">
                     <h3>Cadeira Marrom</h3>
-                    <p>Nas proximidades encontra-se a Casa de Pedra e o Morro Azul de onde é 
-                    extraído calcário, usado na agricultura para a correção do solo, cal, 
-                    brita, granitina.</p>
+                    <p>Cadeira apropriada para usar em bancadas </p>
                     <a href="./cadeira_marrom.html"><div class="Comprar" style="top: 70px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_recepção.jpg" alt="cadeira 1">
-                    <h3>R$ 175,00
+                    <h3>Cadeira utilizada tanto pra recepção de escritório quanto sala de estar em casa</h3>
                     <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</h3>
                     <p class="seila">Cadeira de escritorio iso Turim plastica amarela home office chair</p>
                     <a href="./cadeira_recepção.html"><div class="Comprar">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_recepçãomarrom.jpg" alt="cadeira 2">
-                    <h3>R$ 386,32 no Pix (12% de desconto)
+                    <h3>Sofá para Escritório
                     <br>ou R$ 439,00 em 3x de R$ 146,33 sem juros</h3>
-                    <p>Cadeira de Escritório Presidente com Rodinha Fortt Trento Azul</p>
+                    <p>Cadeira de Sofá Presidente com Rodinha Fortt Trento Azul</p>
                     <a href="./cadeira_recepçãomarrom.html"><div class="Comprar" style="top: 100px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_simpazul.webp" alt="Destino 3">
-                    <h3>Pousada Triuno</h3>
-                    <p>Muito conforto e infraestrutura na área rural, com atendimento 
-                    atencioso e suporte para a pesca esportiva.</p>
+                    <h3>Cadeira Simples Azul</h3>
+                    <p>Cadeira Simples com rodinhas e ajustes para altura e melhor conforto das costas</p>                    
                     <a href="./cadeira_simpaazul.html"><div class="Comprar">Comprar</div></a>
                 </li>
                 <li>
@@ -110,7 +101,7 @@
                 </li>
                 <li>
                     <img src="./imagens/cadeira_verde.jpg" alt="Destino 5">
-                    <h3>Praia Recanto da Ilha</h3>
+                    <h3>Cadeira Verde</h3>
                     <p>As margens do Rio Javaés que tem ao fundo a Ilha do Bananal, a maior ilha fluvial
                     do mundo, e o melhor sem pagar nada por isso. Oferecendo as famílias o melhor custo 
                     benefícios no Sul, não há travessia e o estacionamento prático e seguro.</p>
@@ -118,7 +109,7 @@
                 </li>
                 <li>
                     <img src="../imagens/cadeira_verdeclaro.webp" alt="Destino 6">
-                    <h3>Fundação Bradesco - Escola de Canuanã</h3>
+                    <h3>Cadeira Verde Claro</h3>
                     <p>A Escola-fazenda de Canuanã traz experiências diferenciadas para os alunos:
                     moradas com áreas de descanso, convívio e lazer, atividades ao ar livre, salas
                     modernas e o curso Técnico de Agropecuária.</p>
@@ -126,13 +117,13 @@
                 </li>
                 <li>
                     <img src="../imagens/cadeira_vermelha.jpg" alt="Destino 7">
-                    <h3>Aldeia Canuanã</h3>
+                    <h3>Cadeira Vermelha</h3>
                     <p>Aldeia mãe do povo Javaé.</p>
                     <a href="./cadeira_vermelha.html"><div class="Comprar" style="top: 120px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira-de-balanco_65c6.jpeg" alt="Destino 8">
-                    <h3>Lagoa do Morro Azul</h3>
+                    <h3>Cadeira de Balanço</h3>
                     <p>Lagoa do Morro Azul, um manancial de águas termais surgidas da fenda 
                     de um bloco de rocha calcária, numa abundância impressionante, que de 
                     imediato vai dando formação a uma bela e cristalina piscina natural.</p>
@@ -140,37 +131,33 @@
                 </li>
                 <li>
                     <img src="../imagens/gamer_branca.png" alt="cadeira 2">
-                    <h3>R$ 386,32 no Pix (12% de desconto)
+                    <h3>Cadeira Gamer Branca</h3>
                     <br>ou R$ 439,00 em 3x de R$ 146,33 sem juros</h3>
                     <p>Cadeira Gamer Branca</p>
                     <a href="./gamer_branca.html"><div class="Comprar" style="top: 100px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/gamer_holografica.png" alt="Destino 3">
-                    <h3>Pousada Triuno</h3>
+                    <h3>Cadeira Gamer Holográfica</h3>
                     <p>Cadeira Gamer Holográfica</p>
                     <a href="./gamer_holografica.html"><div class="Comprar">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/gamer_laranja.png" alt="Destino 4">
-                    <h3>Lago Taboca</h3>
-                    <p>Cadeira Gamer Laranja</p>
+                    <h3>Cadeira Gamer Laranja</h3>
+                    <p>Cadeira Gamer Laranja com detalhes em preto</p>
                     <a href="./gamer_laranja.html"><div class="Comprar" style="top: 60px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/gamer_pretaholo.png" alt="Destino 5">
-                    <h3>Praia Recanto da Ilha</h3>
-                    <p>As margens do Rio Javaés que tem ao fundo a Ilha do Bananal, a maior ilha fluvial
-                    do mundo, e o melhor sem pagar nada por isso. Oferecendo as famílias o melhor custo 
-                    benefícios no Sul, não há travessia e o estacionamento prático e seguro.</p>
+                    <h3>Cadeira Gamer Preta Holográfica</h3>
+                    <p>Com detalhes holográficos em preto ao redor do assento.</p>
                     <a href="./gamer_pretaholo.html"><div class="Comprar" style="top: 0px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/poltrona_marrom.png" alt="Destino 6">
-                    <h3>Fundação Bradesco - Escola de Canuanã</h3>
-                    <p>A Escola-fazenda de Canuanã traz experiências diferenciadas para os alunos:
-                    moradas com áreas de descanso, convívio e lazer, atividades ao ar livre, salas
-                    modernas e o curso Técnico de Agropecuária.</p>
+                    <h3>Poltrona Marrom/h3>
+                    <p>Poltrona Confortavél para seu escritorioe casa</p>
                     <a href="./poltrona_marrom.html"><div class="Comprar" style="top:0px;">Comprar</div></a>
                 </li>
                 <a href=""><div class="conhecer">Conhecer</div></a>
