--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
             <div class="coluna">
                 <img src="../imagens/cadeira_recepçãomarrom.jpg" alt="">
-                <a href="../app_cadeira/html/cadeira_recepçãomarrom.html"> <button>Comprar</button> </a>
+   cx dddddddddddddddddd                                                                                                                                                                                                                            <a href="../app_cadeira/html/cadeira_recepçãomarrom.html"> <button>Comprar</button> </a>
                 <h5></h5>
             </div>
 
@@ -121,9 +121,16 @@
                     <h5>.</h5>
                 </div>
             </div>
+                                 
 
+
+            0
             <div class="linha">
-                <div class="coluna">
+21 cadeira_verdeclaro
+
+
+
+.+ <div class="coluna">
                     <img src="../imagens/gamer_branca.png" alt="">
                     <a href="../app_cadeira/html/gamer_branca.html"> <button>Comprar</button> </a>
                     <h5></h5>    
