--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </li>
                 <li>
                     <img src="../imagens/poltrona_marrom.png" alt="Destino 6">
-                    <h3>Poltrona Marrom/h3>
+                    <h3>Poltrona Marrom</h3>
                     <p>A Escola-fazenda de Canuanã traz experiências diferenciadas para os alunos:
                     moradas com áreas de descanso, convívio e lazer, atividades ao ar livre, salas
                     modernas e o curso Técnico de Agropecuária.</p>
