--- a/html/cadeira_amarela.html
+++ b/html/cadeira_amarela.html
@@ -24,8 +24,8 @@
 
     <main>
         <h1>Cadeira</h1>
-        <!-- <p>A Ilha do Bananal é a maior ilha genuinamente fluvial do mundo, com cerca de vinte mil quilômetros quadrados
-            de área, cercada pelos rios Araguaia e Javaés.</p> -->
+        <p>A Ilha do Bananal é a maior ilha genuinamente fluvial do mundo, com cerca de vinte mil quilômetros quadrados
+            de área, cercada pelos rios Araguaia e Javaés.</p>
         <div class="produto">
             <div class="prod_img">
                 <img src="../imagens/cadeira_amarela.webp" alt="" >
