--- a/html/cadeira_azul.html
+++ b/html/cadeira_azul.html
@@ -25,7 +25,7 @@
 
             <div class="produto">
                 <div class="prod_img">
-                    <img src="../imagens/cadeira_azul.jpg" alt="" >
+                    <img src="../imagens/cadeira_azul.avif" alt="" >
                 </div>
         <!-- <img src="../cadeira_amarela.html" alt=""> -->
         <p>A cadeira iso é uma cadeira que gera conforto e é resistente. Ela é super fácil de limpar. Uma cadeira moderna, versátil, resistente, leve de fácil manuseio e é empilhável. Ideal para todos os ambientes, seja em sua casa, na sua empresa ou em sua igreja
