--- a/html/gamer_branca.html
+++ b/html/gamer_branca.html
@@ -20,6 +20,12 @@
     <main>
         <h1>Cadeira Branca</h1>
         <img src="../cadeira_amarela.html" alt="">
+
+        <div class="produto">
+            <div class="prod_img">
+                <img src="../imagens/gamer_branca.png" alt="" >
+            </div>
+
         <p>A cadeira iso é uma cadeira que gera conforto e é resistente. Ela é super fácil de limpar. Uma cadeira moderna, versátil, resistente, leve de fácil manuseio e é empilhável. Ideal para todos os ambientes, seja em sua casa, na sua empresa ou em sua igreja
 
             Características:
