--- a/html/poltrona_marrom.html
+++ b/html/poltrona_marrom.html
@@ -21,7 +21,13 @@
         <h1>Poltrona Marrom</h1>
         <p>A Ilha do Bananal é a maior ilha genuinamente fluvial do mundo, com cerca de vinte mil quilômetros quadrados
             de área, cercada pelos rios Araguaia e Javaés.</p>
-        <img src="../cadeira_amarela.html" alt="">
+
+
+        <div class="produto">
+                <div class="prod_img">
+                    <img src="../imagens/poltrona_marrom.png" alt="" >
+                </div>
+        <!-- <img src="../cadeira_amarela.html" alt=""> -->
         <p>A cadeira iso é uma cadeira que gera conforto e é resistente. Ela é super fácil de limpar. Uma cadeira moderna, versátil, resistente, leve de fácil manuseio e é empilhável. Ideal para todos os ambientes, seja em sua casa, na sua empresa ou em sua igreja
 
             Características:
