--- a/html/cadeira_vermelha.html
+++ b/html/cadeira_vermelha.html
@@ -20,6 +20,11 @@
     <main>
         <h1>Cadeira Vermelha</h1>
         <img src="../cadeira_amarela.html" alt="">
+
+        <div class="produto">
+            <div class="prod_img">
+                <img src="../imagens/cadeira_vermelha.jpg" alt="" >
+            </div>
         <p>A cadeira iso é uma cadeira que gera conforto e é resistente. Ela é super fácil de limpar. Uma cadeira moderna, versátil, resistente, leve de fácil manuseio e é empilhável. Ideal para todos os ambientes, seja em sua casa, na sua empresa ou em sua igreja
 
             Características:
