--- a/html/cadeira_amarela.html
+++ b/html/cadeira_amarela.html
@@ -19,13 +19,14 @@
                 <h1>Mabi Office</h1>
             </div>
         </header>
-     <nav><a  href="../index.html">Menu principal</a></nav>
+     <nav><a  href="../index.html">Menu principal</a> <a  href="./login.html">Entrar/Cadastrar</a></nav>
+
+     
     <!-- <a href="./gamer_pretaholo.html"> <button>Menu Principal </button> </a> -->
 
     <main>
-        <h1>Cadeira</h1>
-        <p>A Ilha do Bananal é a maior ilha genuinamente fluvial do mundo, com cerca de vinte mil quilômetros quadrados
-            de área, cercada pelos rios Araguaia e Javaés.</p>
+        <h1>Cadeira de Escritório</h1>
+        <p>R$ 395,00</p>
         <div class="produto">
             <div class="prod_img">
                 <img src="../imagens/cadeira_amarela.webp" alt="" >
