--- a/html/cadeira_branca.html
+++ b/html/cadeira_branca.html
@@ -22,7 +22,7 @@
 
 
         <!-- <img src="../imagens/cadeira_branca.jpg" alt=""> -->
-        <p>A cadeira iso é uma cadeira que gera conforto e é resistente. Ela é super fácil de limpar. Uma cadeira moderna, versátil, resistente, leve de fácil manuseio e é empilhável. Ideal para todos os ambientes, seja em sua casa, na sua empresa ou em sua igreja
+        <p>R$ 395,00</p>
 
             <div class="produto">
                 <div class="prod_img">
@@ -42,7 +42,7 @@
             
             As cadeiras vão desmontadas?
             O assento vai montado e o encosto é só encaixar e colocar o pino plastico</p>
-            <img src="cadeira_amarela.webp" alt="" width="1000px">
+            <img src="cadeira_branca.html" alt="" width="1000px">
     </main>
     <footer>
         <p class="direitos">&copy; 2023 Site de Turismo. Todos os direitos reservados.</p>
