--- a/html/cadeira_cromada.html
+++ b/html/cadeira_cromada.html
@@ -19,8 +19,7 @@
     <nav><a href="../index.html">Menu principal</a></nav>
     <main>
         <h1>Cadeira</h1>
-        <p>A Ilha do Bananal é a maior ilha genuinamente fluvial do mundo, com cerca de vinte mil quilômetros quadrados
-            de área, cercada pelos rios Araguaia e Javaés.</p>
+        <p>R$ 395,00</p>
         
         <div class="produto">
                 <div class="prod_img">
@@ -41,7 +40,7 @@
             
             As cadeiras vão desmontadas?
             O assento vai montado e o encosto é só encaixar e colocar o pino plastico</p>
-            <img src="cadeira_amarela.webp" alt="" width="1000px">
+            <img src="cadeira_cromada.html" alt="" width="1000px">
     </main>
     <footer>
         <p class="direitos">&copy; 2023 Site de Turismo. Todos os direitos reservados.</p>
