--- a/html/cadeira_maior.html
+++ b/html/cadeira_maior.html
@@ -21,9 +21,8 @@
         <h1>Cadeira</h1>
 
 
-        <p>A Ilha do Bananal é a maior ilha genuinamente fluvial do mundo, com cerca de vinte mil quilômetros quadrados
-            de área, cercada pelos rios Araguaia e Javaés.</p>
-        <img src="../cadeira_amarela.html" alt="">
+        <p>599,99</p>
+        <img src="../cadeira_maior.html" alt="">
 
         <div class="produto">
             <div class="prod_img">
@@ -44,7 +43,7 @@
             
             As cadeiras vão desmontadas?
             O assento vai montado e o encosto é só encaixar e colocar o pino plastico</p>
-            <img src="cadeira_amarela.webp" alt="" width="1000px">
+            <img src="cadeira_maior.html" alt="" width="1000px">
     </main>
     <footer>
         <p class="direitos">&copy; 2023 Site de Turismo. Todos os direitos reservados.</p>
