--- a/html/cadeira_azul.html
+++ b/html/cadeira_azul.html
@@ -19,9 +19,8 @@
     <nav><a href="../index.html">Menu principal</a></nav>
     <main>
 
-        <h1>Cadeira</h1>
-        <p>A Ilha do Bananal é a maior ilha genuinamente fluvial do mundo, com cerca de vinte mil quilômetros quadrados
-            de área, cercada pelos rios Araguaia e Javaés.</p>
+        <h1>Cadeira Anomalia</h1>
+        <p>R$ 395,00</p>
 
             <div class="produto">
                 <div class="prod_img">
@@ -43,7 +42,7 @@
             
             As cadeiras vão desmontadas?
             O assento vai montado e o encosto é só encaixar e colocar o pino plastico</p>
-            <img src="cadeira_amarela.webp" alt="" width="1000px">
+            <img src="cadeira_azul.html" alt="" width="1000px">
     </main>
     <footer>
         <p class="direitos">&copy; 2023 Site de Turismo. Todos os direitos reservados.</p>
