--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
 
         <section class="compras">
-            <h2 class="titulo">Cadeiras</h2>
+            <h2 class="titulo">Cadeiras de Escritório</h2>
             <ul>
                 <li>
                     <img src="../imagens/cadeira_amarela.webp" alt="cadeira 1">
@@ -55,37 +55,43 @@
                 <li>
                     <img src="../imagens/cadeira_branca.jpg" alt="Destino 3">
                     <h3>Cadeira Branca</h3>
-                    <p>Com rodinhas maleavéis e estofados macios</p>
+                    <p>R$ 175,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_branca.html"><div class="Comprar">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_cromada.jpg" alt="Destino 5">
                     <h3>Cadeira Simples Cromada</h3>
-                    <p>Pernas cromadas e ferro confortavéis nas costas</p>
+                    <p>R$ 175,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_cromada.html"><div class="Comprar" style="top: 0px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_executiva.webp" alt="Destino 6">
                     <h3>Cadeira Executiva
-                    <p>A Cadeira Executiva mais ampla do mercado.</p>
+                    <p>R$ 175,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_executiva.html"><div class="Comprar" style="top:0px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_laranjado.webp" alt="Destino 7">
                     <h3>Cadeira Laranja</h3>
-                    <p>Cadeira Laranja simples para sua casa</p>
+                    <p>R$ 175,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_laranjado.html"><div class="Comprar" style="top: 120px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_maior.jpg" alt="Destino 8">
                     <h3>Cadeira Grande</h3>
-                    <p>Cadeira Grande para todos os ambientes</p>
+                    <p>R$ 175,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_maior.html"><div class="Comprar" style="top: 30px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_marrom.jpg" alt="Destino 9">
                     <h3>Cadeira Marrom</h3>
-                    <p>Cadeira apropriada para usar em bancadas </p>
+                    <p>R$ 175,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_marrom.html"><div class="Comprar" style="top: 70px;">Comprar</div></a>
                 </li>
                 <li>
@@ -105,44 +111,43 @@
                 <li>
                     <img src="../imagens/cadeira_simpazul.webp" alt="Destino 3">
                     <h3>Cadeira Simples Azul</h3>
-                    <p>Cadeira Simples com rodinhas e ajustes para altura e melhor conforto das costas</p>                    
+                    <p>R$ 175,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>                    
                     <a href="./html/cadeira_simpaazul.html"><div class="Comprar">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_simples.webp" alt="Destino 4">
                     <h3>Lago Taboca</h3>
-                    <p>Criado para a irrigação do Projeto Rio Formoso, tornou-se ponto 
-                    famoso para a pesca de tucunaré, pirarucu, pintado, aruanã, etc.</p>
+                    <p>R$ 175,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_simples.html"><div class="Comprar" style="top: 60px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="./imagens/cadeira_verde.jpg" alt="Destino 5">
                     <h3>Cadeira Verde</h3>
-                    <p>As margens do Rio Javaés que tem ao fundo a Ilha do Bananal, a maior ilha fluvial
-                    do mundo, e o melhor sem pagar nada por isso. Oferecendo as famílias o melhor custo 
-                    benefícios no Sul, não há travessia e o estacionamento prático e seguro.</p>
+                    <p>R$ 175,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_verde.html"><div class="Comprar" style="top: 0px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_verdeclaro.webp" alt="Destino 6">
                     <h3>Cadeira Verde Claro</h3>
-                    <p>A Escola-fazenda de Canuanã traz experiências diferenciadas para os alunos:
-                    moradas com áreas de descanso, convívio e lazer, atividades ao ar livre, salas
-                    modernas e o curso Técnico de Agropecuária.</p>
+                    <p>R$ 175,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_verdeclaro.html"><div class="Comprar" style="top:0px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_vermelha.jpg" alt="Destino 7">
                     <h3>Cadeira Vermelha</h3>
-                    <p>Aldeia mãe do povo Javaé.</p>
+                    <p>R$ 175,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_vermelha.html"><div class="Comprar" style="top: 120px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira-de-balanco_65c6.jpeg" alt="Destino 8">
                     <h3>Cadeira de Balanço</h3>
-                    <p>Lagoa do Morro Azul, um manancial de águas termais surgidas da fenda 
-                    de um bloco de rocha calcária, numa abundância impressionante, que de 
-                    imediato vai dando formação a uma cristalina piscina natural.</p>
+                    <p>R$ 175,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira-de-balanco_65c6.html"><div class="Comprar" style="top: 30px;">Comprar</div></a>
                 </li>
                 <li>
@@ -155,27 +160,29 @@
                 <li>
                     <img src="../imagens/gamer_holografica.png" alt="Destino 3">
                     <h3>Cadeira Gamer Holográfica</h3>
-                    <p>Cadeira Gamer Holográfica</p>
+                    <p>R$ 175,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/gamer_holografica.html"><div class="Comprar">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/gamer_laranja.png" alt="Destino 4">
                     <h3>Cadeira Gamer Laranja</h3>
-                    <p>Cadeira Gamer Laranja com detalhes em preto</p>
+                    <p>R$ 175,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/gamer_laranja.html"><div class="Comprar" style="top: 60px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/gamer_pretaholo.png" alt="Destino 5">
                     <h3>Cadeira Gamer Preta Holográfica</h3>
-                    <p>Com detalhes holográficos em preto ao redor.</p>
+                    <p>R$ 175,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/gamer_pretaholo.html"><div class="Comprar" style="top: 0px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/poltrona_marrom.png" alt="Destino 6">
                     <h3>Poltrona Marrom</h3>
-                    <p>A Escola-fazenda de Canuanã traz experiências diferenciadas para os alunos:
-                    moradas com áreas de descanso, convívio e lazer, atividades ao ar livre, salas
-                    modernas e o curso Técnico de Agropecuária.</p>
+                    <p>R$ 175,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/poltrona_marrom.html"><div class="Comprar" style="top:0px;">Comprar</div></a>
                 </li>
                 <a href=""><div class="conhecer">Conhecer</div></a>
