--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/poltrona_marrom.html"><div class="Comprar" style="top:0px;">Comprar</div></a>
                 </li>
-                <a href=""><div class="conhecer">Conhecer</div></a>
+                <a href=""><div class="conhecer">Comprar</div></a>
             </ul>
         </section>
 
