--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </li>
                 <li>
                     <img src="../imagens/cadeira_simples.webp" alt="Destino 4">
-                    <h3>Lago Taboca</h3>
+                    <h3>Cadeira Simples</h3>
                     <p>R$ 175,00
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_simples.html"><div class="Comprar" style="top: 60px;">Comprar</div></a>
