--- a/html/cadeira_laranjado.html
+++ b/html/cadeira_laranjado.html
@@ -16,9 +16,10 @@
             <h1>Mabi Office</h1>
         </div>
     </header>
-    <nav><a href="../index.html">Menu principal</a></nav>
+    <nav><a  href="../index.html">Menu principal</a> <a  href="./login.html">Entrar/Cadastrar</a></nav>
     <main>
         <h1>Cadeira Laranja</h1>
+        <p>R$ 346,00</p>
 
         <div class="prod_img">
             <img src="../imagens/cadeira_laranjado.webp" alt="" >
