--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             <h1>Mabi Office</h1>
         </div>
     </header>
-
-
+    <nav><a  href="./index.html">Menu principal</a> <a  href="../app_cadeira/html/login.html">Entrar/Cadastrar</a></nav>
     <!-- <nav><a href="./index.html">Menu principal</a></nav> -->
 
     <main>
@@ -46,7 +45,7 @@
                     <a href="./html/cadeira_amarela.html"><div class="Comprar">Comprar</div></a>
                 </li>
                 <li>
-                    <img src="./imagens/cadeira_azul.avif" alt="cadeira 2">
+                    <img src="./imagens/OIP.jfif" alt="cadeira 2">
                     <h3>Cadeira de Escritório Presidente Trento Azul</h3>
                     <p>R$ 386,32 no Pix (12% de desconto)
                         <br>ou R$ 439,00 em 3x de R$ 146,33 sem juros</p>
@@ -55,133 +54,134 @@
                 <li>
                     <img src="../imagens/cadeira_branca.jpg" alt="Destino 3">
                     <h3>Cadeira Branca</h3>
-                    <p>R$ 175,00
+                    <p>R$ 456,00
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_branca.html"><div class="Comprar">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_cromada.jpg" alt="Destino 5">
                     <h3>Cadeira Simples Cromada</h3>
-                    <p>R$ 175,00
+                    <p>R$ 258,00
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_cromada.html"><div class="Comprar" style="top: 0px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_executiva.webp" alt="Destino 6">
-                    <h3>Cadeira Executiva
-                    <p>R$ 175,00
+                    <h3>Cadeira Executiva</h3>
+                    <p>R$ 654,00
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_executiva.html"><div class="Comprar" style="top:0px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_laranjado.webp" alt="Destino 7">
                     <h3>Cadeira Laranja</h3>
-                    <p>R$ 175,00
+                    <p>R$ 346,00
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_laranjado.html"><div class="Comprar" style="top: 120px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_maior.jpg" alt="Destino 8">
-                    <h3>Cadeira Grande</h3>
-                    <p>R$ 175,00
+                    <h3>Cadeira Simples Cromada</h3>
+                    <p>R$ 1056,00
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_maior.html"><div class="Comprar" style="top: 30px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_marrom.jpg" alt="Destino 9">
                     <h3>Cadeira Marrom</h3>
-                    <p>R$ 175,00
+                    <p>R$ 874,00
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_marrom.html"><div class="Comprar" style="top: 70px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_recepção.jpg" alt="cadeira 1">
-                    <h3>Cadeira utilizada tanto pra recepção de escritório quanto sala de estar em casa</h3>
-                    <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</h3>
+                    <h3>Cadeira Sofá</h3>
+                    <p>R$ 342,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <p class="seila">Cadeira de escritorio iso Turim plastica amarela home office chair</p>
                     <a href="./html/cadeira_recepção.html"><div class="Comprar">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_recepçãomarrom.jpg" alt="cadeira 2">
-                    <h3>Sofá para Escritório
-                    <br>ou R$ 439,00 em 3x de R$ 146,33 sem juros</h3>
-                    <p>Cadeira de Sofá Presidente com Rodinha Fortt Trento Azul</p>
+                    <h3>Sofá para Escritório</h3>
+                    <p>R$ 1000,00
+                        <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_recepçãomarrom.html"><div class="Comprar" style="top: 100px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_simpazul.webp" alt="Destino 3">
                     <h3>Cadeira Simples Azul</h3>
-                    <p>R$ 175,00
+                    <p>R$ 800,00
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>                    
                     <a href="./html/cadeira_simpaazul.html"><div class="Comprar">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_simples.webp" alt="Destino 4">
                     <h3>Cadeira Simples</h3>
-                    <p>R$ 175,00
+                    <p>R$ 561,00
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_simples.html"><div class="Comprar" style="top: 60px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="./imagens/cadeira_verde.jpg" alt="Destino 5">
                     <h3>Cadeira Verde</h3>
-                    <p>R$ 175,00
+                    <p>R$ 555,00
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_verde.html"><div class="Comprar" style="top: 0px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_verdeclaro.webp" alt="Destino 6">
                     <h3>Cadeira Verde Claro</h3>
-                    <p>R$ 175,00
+                    <p>R$ 825,00
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_verdeclaro.html"><div class="Comprar" style="top:0px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira_vermelha.jpg" alt="Destino 7">
                     <h3>Cadeira Vermelha</h3>
-                    <p>R$ 175,00
+                    <p>R$ 424,00
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira_vermelha.html"><div class="Comprar" style="top: 120px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/cadeira-de-balanco_65c6.jpeg" alt="Destino 8">
                     <h3>Cadeira de Balanço</h3>
-                    <p>R$ 175,00
+                    <p>R$ 257,00
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/cadeira-de-balanco_65c6.html"><div class="Comprar" style="top: 30px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/gamer_branca.png" alt="cadeira 2">
                     <h3>Cadeira Gamer Branca</h3>
-                    <br>ou R$ 439,00 em 3x de R$ 146,33 sem juros</h3>
+                    <br>ou R$ 343,00 em 3x de R$ 146,33 sem juros</h3>
                     <p>Cadeira Gamer Branca</p>
                     <a href="./html/gamer_branca.html"><div class="Comprar" style="top: 100px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/gamer_holografica.png" alt="Destino 3">
                     <h3>Cadeira Gamer Holográfica</h3>
-                    <p>R$ 175,00
+                    <p>R$ 913,00
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/gamer_holografica.html"><div class="Comprar">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/gamer_laranja.png" alt="Destino 4">
                     <h3>Cadeira Gamer Laranja</h3>
-                    <p>R$ 175,00
+                    <p>R$ 842,00
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/gamer_laranja.html"><div class="Comprar" style="top: 60px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/gamer_pretaholo.png" alt="Destino 5">
                     <h3>Cadeira Gamer Preta Holográfica</h3>
-                    <p>R$ 175,00
+                    <p>R$ 734,00
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/gamer_pretaholo.html"><div class="Comprar" style="top: 0px;">Comprar</div></a>
                 </li>
                 <li>
                     <img src="../imagens/poltrona_marrom.png" alt="Destino 6">
                     <h3>Poltrona Marrom</h3>
-                    <p>R$ 175,00
+                    <p>R$ 973,00
                         <br> ou 12x de R$ 18,07 com juros Cartão Amex - Vindi</p>
                     <a href="./html/poltrona_marrom.html"><div class="Comprar" style="top:0px;">Comprar</div></a>
                 </li>
