--- a/html/cadeira_azul.html
+++ b/html/cadeira_azul.html
@@ -16,11 +16,11 @@
             <h1>Mabi Office</h1>
         </div>
     </header>
-    <nav><a href="../index.html">Menu principal</a></nav>
+    <nav><a  href="../index.html">Menu principal</a> <a  href="./login.html">Entrar/Cadastrar</a></nav>
     <main>
 
-        <h1>Cadeira Anomalia</h1>
-        <p>R$ 395,00</p>
+        <h1>Cadeira de Escritório Presidente Trento Azul</h1>
+        <p>R$ 386,00</p>
 
             <div class="produto">
                 <div class="prod_img">
