--- a/html/cadeira_branca.html
+++ b/html/cadeira_branca.html
@@ -16,13 +16,13 @@
             <h1>Mabi Office</h1>
         </div>
     </header>
-    <nav><a href="../index.html">Menu principal</a></nav>
+    <nav><a  href="../index.html">Menu principal</a> <a  href="./login.html">Entrar/Cadastrar</a></nav>
     <main>
         <h1>Cadeira Branca</h1>
 
 
         <!-- <img src="../imagens/cadeira_branca.jpg" alt=""> -->
-        <p>R$ 395,00</p>
+        <p>R$ 456,00</p>
 
             <div class="produto">
                 <div class="prod_img">
