--- a/html/cadeira_executiva.html
+++ b/html/cadeira_executiva.html
@@ -76,12 +76,12 @@
                 <h1>Mabi Office</h1>
             </div>
         </header>
-     <nav><a  href="../index.html">Menu principal</a></nav>
+        <nav><a  href="../index.html">Menu principal</a> <a  href="./login.html">Entrar/Cadastrar</a></nav>
     <!-- <a href="./gamer_pretaholo.html"> <button>Menu Principal </button> </a> -->
 
     <main>
-        <h1>Cadeira</h1>
-        <p>R$ 395,00</p>
+        <h1>Cadeira Executiva</h1>
+        <p>R$ 258,00</p>
         <div class="produto">
             <div class="prod_img">
                 <img src="../imagens/cadeira_executiva.webp" alt="" >
