--- a/html/cadeira_marrom.html
+++ b/html/cadeira_marrom.html
@@ -16,11 +16,10 @@
             <h1>Mabi Office</h1>
         </div>
     </header>
-    <nav><a href="../index.html">Menu principal</a></nav>
+    <nav><a  href="../index.html">Menu principal</a> <a  href="./login.html">Entrar/Cadastrar</a></nav>
     <main>
-        <h1>Cadeira</h1>
-        <p>A Ilha do Bananal é a maior ilha genuinamente fluvial do mundo, com cerca de vinte mil quilômetros quadrados
-            de área, cercada pelos rios Araguaia e Javaés.</p>
+        <h1>Cadeira Marrom</h1>
+        <p>874,00</p>
         <img src="../cadeira_amarela.html" alt="">
 
         <div class="produto">
