--- a/html/cadeira_simpaazul.html
+++ b/html/cadeira_simpaazul.html
@@ -16,7 +16,7 @@
             <h1>Mabi Office</h1>
         </div>
     </header>
-    <nav><a href="../index.html">Menu principal</a></nav>
+    <nav><a  href="../index.html">Menu principal</a> <a  href="./login.html">Entrar/Cadastrar</a></nav>
     <main>
         <h1>Cadeira Azul</h1>
        
